# Accel-MQ-Ramulator

./: .gitignore  LICENSE  README.md  pull-accel-sim-image.sh
MQSim/: ssdconfig.xml
MQSim/src/: main.cpp
MQSim/src/exec/: Device_Parameter_Set.cpp  Device_Parameter_Set.h  Execution_Parameter_Set.cpp  Execution_Parameter_Set.h  Flash_Parameter_Set.cpp  Flash_Parameter_Set.h  Host_Parameter_Set.cpp  Host_System.cpp  Host_System.h  IO_Flow_Parameter_Set.cpp  IO_Flow_Parameter_Set.h  SSD_Device.cpp  (+2 more)
docs/: ACCEL_SIM_FRAMEWORK.md  CO_SIM_MQSIM_RAMULATOR2.md  CO_SIM_MQSIM_RAMULATOR2_DEV.md  DRAM_HBM.md  HBF.md  HBF_DESIGN.md  HBF_IMPLEMENTATION_STATUS.md
docs/plans/: 2026-03-20-github-slimming-and-cosim-docs.md  2026-03-21-publish-github-snapshot.md
external_wrappers/mqsim_wrap/: CMakeLists.txt  mq_send_front_test.cpp  mqsim_wrap.cpp  mqsim_wrap.h
external_wrappers/ramulator2_wrap/: CMakeLists.txt  ramulator2_wrap.cpp
gpu-simulator/: CMakeLists.txt  Makefile
gpu-simulator/gpgpu-sim/: CMakeLists.txt
gpu-simulator/trace-driven/: Makefile  trace_driven.cc
gpu-simulator/trace-parser/: Makefile
hw_run/: backend_map.config  backend_map.txt  backend_map_missing_weights.config  backend_map_missing_weights.txt  backend_meta.tsv  backend_meta_missing_weights.tsv  hbf_requests_missing_weights.trace  tiny_transformer_backend_map
hw_run/traces/: kernel-1-ctx_0x55ddb0567af0.trace.xz  kernel-1-ctx_0x55ddb0567af0.traceg.xz  kernelslist.g  kernelslist_ctx_0x55ddb0567af0  stats_ctx_0x55ddb0567af0
util/docker/: pull_accel_sim_image_from_mirror.sh
util/tracer_nvbit/: install_nvbit.sh  run_hw_trace.py
workloads/dram_access_driver/: dram_access_driver.cu  hbf.config  run_end2end.sh
workloads/flashattention_v2/: README.md  annotate_backend_trace.py  fa2_runner.py  flashattention_v2_min.cu  gen_backend_map.py  hbf.config  run_end2end_backend_map.sh  run_end2end_cuda.sh  run_end2end_tiny_transformer.sh  run_sim_only.sh  test_annotate_backend_trace.py  test_gen_backend_map.py  tiny_transformer_backend_map.cu
workloads/hbf_max_bw/: README.md  hbf_fast_timings.config  hbf_max_bw_driver.cu  hbf_qv100_1p2TBs.config  hbf_qv100_1p2TBs_mix50.config  run_end2end.sh  sm86_80sm.config  sm86_92sm.config
workloads/hf_small_model/: README.md  hbf.config  hf_runner.py  run_end2end_hf.sh
workloads/minimal_hbf_driver/: README.md  backend_map_minimal.config  backend_map_minimal.txt  backend_map_unmapped.txt  hbf.config  hbf_mqsim.config  hbf_mqsim_hbm_ram2.config  hbm_ramulator2.config  min_hbf_driver.cu  run_end2end.sh
workloads/mlperf_bert/: bert_hbf_only_mqsim.config  bert_hbm_only_dram.config  bert_hbm_only_ram2.config  bert_mixed_8hbf_8hbm.config
workloads/mqsim/: hbf_1p2TBs.xml
workloads/ramulator2/: hbm2_16ch.yaml
(+168 files in other folders)
